crates/derive/tests/reactive/pass/03-pub-struct.rs
use sorrow_derive::Reactive;

#[derive(Reactive)]
pub struct WorldState {
    pub test: i32,
}

fn main() {}
